--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Tutorial Zoom - Part 4</string>
-
-    <string name="menu_reset">Reset</string>
-
+    <string name="app_name">ImageZoomView Demo</string>
 </resources>
